# rfid-triggered-music

./: Product_Requirements_Document.md  README.md  app.py  config.md  implementation_summary.md  macos_playback_host.py  pyproject.toml  rfid_listener.py  rfid_listener_enhanced.py  setup.sh  start.sh  start_rfid_listener.sh  start_rfid_listener_enhanced.sh  start_webapp.sh
templates/: assign.html  base.html  edit.html  index.html
