[project]
name = "rfid-triggered-music"
version = "1.0.0"
description = "RFID-triggered music playback system with Flask web interface"
authors = [
    { name = "Fuzzwah", email = "your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.3,<3.0",
    "requests>=2.31.0,<3.0",
    "gunicorn>=21.2.0,<22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the Python scripts and templates in the root directory
include = [
    "*.py",
    "templates/**/*",
    "static/**/*",
]

[tool.hatch.build]
# Don't try to find packages automatically since this is a script-based project
packages = []

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''